samples/_failures_safe/1760959887_3fd01a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e690a71d.c: In function ‘main’:
./samples/SAFE/__tmp_e690a71d.c:134:12: error: missing terminating " character
  134 |     printf("Matrix Operations
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e690a71d.c:134:5: error: expected expression at end of input
  134 |     printf("Matrix Operations
      |     ^~~~~~
./samples/SAFE/__tmp_e690a71d.c:134:5: error: expected declaration or statement at end of input
